--- a/1/root.tex
+++ b/1/root.tex
@@ -71,8 +71,8 @@
 	Kahraman, Kerem \\
 	\texttt{keremkahraman@hotmail.de.de}
 	\and 
-	, Pascal \\
-	\texttt{p\_14@cs.uni-kl.de}
+	Bergsträßer, Pascal \\
+	\texttt{p\_bergstra15@cs.uni-kl.de}
 }
 
 \newtheorem{theorem}{Satz}
