--- a/1/ex3.tex
+++ b/1/ex3.tex
@@ -1,3 +1,4 @@
 % !TeX root = root.tex
 % !TeX spellcheck = en_US.utf-8
 \section{Longest (Worst Case) Shortest Counterexample to a Safety Property for Automata}
+It is possible for the shortest counterexample to be in the length of $O(n*m)$, however this might only be the case if the lowest common multiple of $m$ and $n$ is $m*n$. This is clearly the case if $n$ and $m$ are primes, an example in this case would be, the program accepts all words $(a^m)^*$ and the property after inversion accepts all words $(a^n)^*$. Then the smallest element of the intersection would clearly be the smallest common multiple and for primes this is $m*n$. Since $m*n$ is also the number of states it is impossible for there to be a longer, but no shorter, counterexample. In the case of concurrency, if $s_i$ is the number of states of program $i$, then the total amount of states would be $p \Pi s_i$. If the programs have different amounts of states, then we could again construct the worst case by choosing each to be a different prime, which would then result in the number of states being the shortest counterexample, however if the programs have to be copies of each other it becomes much more complicated to construct a long counterexample.
