--- a/1/ex1.tex
+++ b/1/ex1.tex
@@ -13,3 +13,17 @@ With the inductive hypothesis there is a walk $r_{n-i}^N \dots r_n^N$ with $r_n^
 \end{description}
 
 Since $r_{n-n}^D = r_0^D = \{q_0^N\}$, it holds that $r_0^N \dots r_n^N$ is an accepting run of $N$ for $w$.
+
+\section{Encoding Programs as Automaton}
+\textbf{Task 1.} 
+The following automata shows the example of a semaphore program for $P=3$ simultaneous programs and $n=2$ acquire permits.
+\begin{figure}[h]
+\begin{tikzpicture}[auto,swap]
+    \foreach \pos/\name in {{(0,2)/000}, {(0,0)/100}, {(3,0)/110},{(6,0)/111},{(0,-2)/200},{(3,-2)/210},{(6,-2)/220},{(6,-2)/211},{(9,-2)/221},{(12,-2)/222},{(6,-4)/311},{(9,-4)/321},{(12,-4)/322},{(3,-4)/220},{(9,-6)/331},{(12,-6)/332},{(12,-8)/333}}
+        \node[vertex] (\name) at \pos {$\name$};
+    \foreach \source/ \dest /\weight in {000/100/acquire(), 100/200/acquire(),100/110/balance+=x;,200/210/balance+=x;,110/111/release(),210/211/release();,111/211/acquire(),211/311/acquire();,211/221/balance+=x;,221/222/release(),221/321/acquire(),321/322/release(),222/322/acquire(),311/321/balance+=x;,110/210/acquire(),210/220/balance+=x;,220/221/release(),321/331/balance+=x;,331/332/release(),332/333/release(),322/332/balance+=x;}
+        \path[edge] (\source) -- node[weight] {$\weight$} (\dest);
+\end{tikzpicture}
+\end{figure}
+\\
+\textbf{Task 2.} According to the task a thread can use lock() an arbitrary amount of times. This makes the state space infinte and therefor the reentrant lock cannot be represented by an NFA. If there is a maximum amount $n$ of times lock() can be used the automaton will look like $n$ merged lock automatons.
