--- a/1/root.tex
+++ b/1/root.tex
@@ -7,6 +7,16 @@
 \usepackage{geometry}
 \geometry{a4paper}
 % \usepackage[german]{babel}
+\usepackage{mathtools}
+\usepackage{amsfonts,amsmath,amssymb,amsthm, amsbsy}
+\usepackage{tikz}
+\usetikzlibrary{arrows}
+\usetikzlibrary{fit}
+\usepackage{subfigure}
+\tikzstyle{vertex}=[circle,fill=black!25,minimum size=20pt,inner sep=0pt]
+\tikzstyle{selected vertex} = [vertex, fill=red!24]
+\tikzstyle{edge} = [draw,thick,->]
+\tikzstyle{weight} = []
 
 \usepackage{graphicx}
 \usepackage[parfill]{parskip}
