--- a/2/ex2.tex
+++ b/2/ex2.tex
@@ -1,15 +1,103 @@
 % !TeX root = root.tex
 % !TeX spellcheck = en_US
-\section{Encoding Programs as Automaton}
-\textbf{Task 1.} 
-The following automata shows the example of a semaphore program for $P=3$ simultaneous programs and $n=2$ acquire permits.
+\section{Petri nets}
+\textbf{Task 1.} A semaphore which allows two processes to be in the critical section can be modeled by adding two tokens in the place \textit{U}.
 \begin{figure}[h]
-\begin{tikzpicture}[auto,swap]
-    \foreach \pos/\name in {{(0,2)/000}, {(0,0)/100}, {(3,0)/110},{(6,0)/111},{(0,-2)/200},{(3,-2)/210},{(6,-2)/220},{(6,-2)/211},{(9,-2)/221},{(12,-2)/222},{(6,-4)/311},{(9,-4)/321},{(12,-4)/322},{(3,-4)/220},{(9,-6)/331},{(12,-6)/332},{(12,-8)/333}}
-        \node[vertex] (\name) at \pos {$\name$};
-    \foreach \source/ \dest /\weight in {000/100/acquire(), 100/200/acquire(),100/110/balance+=x;,200/210/balance+=x;,110/111/release(),210/211/release();,111/211/acquire(),211/311/acquire();,211/221/balance+=x;,221/222/release(),221/321/acquire(),321/322/release(),222/322/acquire(),311/321/balance+=x;,110/210/acquire(),210/220/balance+=x;,220/221/release(),321/331/balance+=x;,331/332/release(),332/333/release(),322/332/balance+=x;}
-        \path[edge] (\source) -- node[weight] {$\weight$} (\dest);
+\begin{tikzpicture}[node distance=1.5cm,>=stealth',bend angle=45,auto]
+	\node [transition] (s) [label=below:spawn]{};
+	\node[place,tokens=0] (0) [right of=s, label=below:0]{}
+		edge[pre] (s);
+	\node [transition] (a) [right of=0, label=below:acquire]{}
+		edge[pre] (0);
+	\node[place,tokens=0] (1) [right of=a, label=below:1]{}
+		edge[pre] (a);
+	\node [transition] (b) [right of=1, label=below:balance]{}
+		edge[pre] (1);
+	\node[place,tokens=0] (2) [right of=b, label=below:2]{}
+		edge[pre] (b);
+	\node [transition] (r) [right of=2, label=below:release]{}
+		edge[pre] (2);
+	\node[place,tokens=0] (3) [right of=r, label=below:3]{}
+		edge[pre] (r);
+	\node[place,tokens=2] (U) [above of=a, label=above:U]{}
+		edge[pre,bend left=10] (r)
+		edge[post] (a);
+	\node[place,tokens=0] (L) [above of=2, label=above:L]{}
+		edge[pre,bend right=10] (a)
+		edge[post] (r);
 \end{tikzpicture}
 \end{figure}
-\\
-\textbf{Task 2.} According to the task a thread can use lock() an arbitrary amount of times. This makes the state space infinte and therefor the reentrant lock cannot be represented by an NFA. If there is a maximum amount $n$ of times lock() can be used the automaton will look like $n$ merged lock automatons.
+
+To model that only a constant overall number $k$ of permits are allowed, we add an additional place \textit{permits} which contains $k$ tokens and is connected to the transition \textit{acquire}. In the following figure we set $k=5$.
+\begin{figure}[h]
+\begin{tikzpicture}[node distance=1.5cm,>=stealth',bend angle=45,auto]
+	\node [transition] (s) [label=below:spawn]{};
+	\node[place,tokens=0] (0) [right of=s, label=below:0]{}
+		edge[pre] (s);
+	\node [transition] (a) [right of=0, label=below:acquire]{}
+		edge[pre] (0);
+	\node[place,tokens=0] (1) [right of=a, label=below:1]{}
+		edge[pre] (a);
+	\node [transition] (b) [right of=1, label=below:balance]{}
+		edge[pre] (1);
+	\node[place,tokens=0] (2) [right of=b, label=below:2]{}
+		edge[pre] (b);
+	\node [transition] (r) [right of=2, label=below:release]{}
+		edge[pre] (2);
+	\node[place,tokens=0] (3) [right of=r, label=below:3]{}
+		edge[pre] (r);
+	\node[place,tokens=2] (U) [above of=a, label=above:U]{}
+		edge[pre,bend left=10] (r)
+		edge[post] (a);
+	\node[place,tokens=0] (L) [above of=2, label=above:L]{}
+		edge[pre,bend right=10] (a)
+		edge[post] (r);
+	\node[place,tokens=5] (p) [above of=0, label=above:permits]{}
+		edge[post] (a);
+\end{tikzpicture}
+\end{figure}
+
+\textbf{Task 2.} To model a reentrant lock, we add the transitions \textit{relock1} and \textit{relock2} such that in both places \textit{1} and \textit{2} the process in the critical section can acquire a further lock. Since we have to check whether a process calls unlock as often as lock, we add the place \textit{counter} which gets a token whenever relock is called and loses a token whenever reunlock is called. Only if the number of tokens in \textit{counter} is zero, the process can release the lock and leave the critical section. Therefore, we add an inhibitory edge from \textit{counter} to $\textit{unlock}$.
+\begin{figure}[h]
+\begin{tikzpicture}[node distance=1.5cm,>=stealth',bend angle=45,auto]
+	\node [transition] (s) [label=below:spawn]{};
+	\node[place,tokens=0] (0) [right of=s, label=below:0]{}
+		edge[pre] (s);
+	\node [transition] (l) [right of=0, label=below:lock]{}
+		edge[pre] (0);
+	\node[place,tokens=0] (1) [right of=a, label=below:1]{}
+		edge[pre] (l);
+	\node [transition] (b) [right of=1, label=below:balance]{}
+		edge[pre] (1);
+	\node[place,tokens=0] (2) [right of=b, label=below:2]{}
+		edge[pre] (b);
+	\node [transition] (u) [right of=2, label=below:unlock]{}
+		edge[pre] (2);
+	\node[place,tokens=0] (3) [right of=r, label=below:3]{}
+		edge[pre] (u);
+	\node[place,tokens=1] (U) [above of=a, label=above:U]{}
+		edge[pre, bend left=10] (u)
+		edge[post] (l);
+	\node[place,tokens=0] (L) [above of=2, label=above:L]{}
+		edge[pre,bend right=10] (l)
+		edge[post] (u);
+	\node [transition] (l1) [below of=1, label=left:relock1]{}
+		edge[pre, bend left=20] (1)
+		edge[post, bend right=20] (1);
+	\node [transition] (l2) [below of=2, label=left:relock2]{}
+		edge[pre, bend left=20] (2)
+		edge[post, bend right=20] (2);
+	\node[place,tokens=0] (c) [below of=l2, label=below:counter]{}
+		edge[pre] (l1)
+		edge[pre] (l2)
+		edge[post,-o,bend left=15] (u);
+	\node [transition] (u1) [left of=c, label=left:reunlock1]{}
+		edge[pre] (c)
+		edge[pre] (1)
+		edge[post, bend right=15] (1);
+	\node [transition] (u2) [right of=c, label=right:reunlock2]{}
+		edge[pre] (c)
+		edge[pre] (2)
+		edge[post, bend right=15] (2);
+\end{tikzpicture}
+\end{figure}
