Sheet 2 Execise 1 and some changes to root.

--- a/2/ex1.tex
+++ b/2/ex1.tex
@@ -1,15 +1,42 @@
 % !TeX root = root.tex
 % !TeX spellcheck = en_US
-\section{Correctness of the Determinization Construction}
-We show that $w \in L(D) \Rightarrow w \in L(N)$, where $D$ is the DFA constructed from the NFA $N$.
+\section{Synchronized Product for DFAs/NFAs with Different Alphabets}
+\subsection{Task 1}
 
-Let $w \in L(D)$ be an arbitrary word in the accepted language of $D$. With definition of $L(D)$ there is an accepting run $r_D = r_0^D \dots r_n^D$ of $D$ for $w$. We show by induction that there is also an accepting run $r_0^N \dots r_n^N$ of $N$ for $w$. To simplify notations, we say that a walk is a run that does not have to start with an initial state.
+\begin{align*}
+T((Q_M,\Sigma_M,\delta_M,q_{0 M},F_M),\Sigma) = (Q_M,\Sigma,\delta,q_{0 M},F_M)\\
+\delta(q,\sigma)=
+\begin{cases} 
+      \delta_M(q,\sigma) & q\in \Sigma_M\\
+      q & else
+   \end{cases}
+\end{align*}
 
-\begin{description}
-\item[Base case:] For $i=0$ we have $w_{n-i+1} \dots w_n = \epsilon$. Since the run $r_D$ is accepting, it holds that $r_n^D \cap F_N \neq \emptyset$. Therefore, there exists a state $r_n^N \in r_n^D \cap F_N$ that gives us an accepting walk of $N$ for the empty word $\epsilon$ with $r_n^N \in r_n^D$.
-\item[Inductive hypothesis:] For $0 \leq i \leq n$ there is an accepting walk $r_{n-i}^N \dots r_n^N$ of $N$ for $w_{n-i+1} \dots w_n$ with $r_{n-i}^N \in r_{n-i}^D$.
-\item[Inductive step:] $i \rightarrow i+1$\\
-With the inductive hypothesis there is a walk $r_{n-i}^N \dots r_n^N$ with $r_n^N \in F_N$ for $w_{n-i+1} \dots w_n$. By construction of $D$ there exists a state $r_{n-(i+1)}^N \in r_{n-(i+1)}^D$ such that $r_{n-i}^N \in \delta_N(r_{n-(i+1)}^N, w_{n-i})$. Thus, $r_{n-(i+1)}^N r_{n-i}^N \dots r_n^N$ is an accepting walk of $N$ for $w_{n-i} \dots w_n$ with $r_{n-(i+1)}^N \in r_{n-(i+1)}^D$.
-\end{description}
+By the definition in the lecture the extended $\delta(q,\sigma)$ should just do nothing if the symbol is not in the language, this is the same as just doing a self loop, effectively we are doing nothing.
 
-Since $r_{n-n}^D = r_0^D = \{q_0^N\}$, it holds that $r_0^N \dots r_n^N$ is an accepting run of $N$ for $w$.
+\subsection{Task 2}
+
+\begin{align*}
+T((Q_M,\Sigma_M,\delta_M,q_{0 M},F_M),\Sigma) = (Q_M,\Sigma,\delta,q_{0 M},F_M)\\
+\delta(q,\sigma)=
+\begin{cases} 
+      \delta_M(q,\sigma) 	& q \in \Sigma_M\\
+      \{q\} 				& q \in \Sigma \setminus \Sigma_M
+   \end{cases}
+\end{align*}
+
+By the definition in the lecture the extended $\delta(q,\sigma)$ should just do nothing if the symbol is not in the language, this is the same as just doing a self loop, effectively we are doing nothing.
+
+First of all we will prove that determinization and then using a) is the same as using the definition above and then doing determinization. Clearly the only thing that has to be shown, is that the transition function $\delta_D(q_D,a)$ is the same for both, because nothing else changes.
+
+Let $(Q_D,\Sigma,\delta_{D1},q_{0 D},F_D)$ be the first mentioned automata(i.e. $M \rightarrow D \rightarrow D1$) and $\delta_{D2}$ be the transition of he second mentioned automata(i.e. $M \rightarrow N \rightarrow D2$). Let $\delta_D$ be the transition of the determinized automata before this construction(i.e. $M \rightarrow D$). Let $\delta_N$ be the constructed automata before determinization(i.e. $M \rightarrow N$), essentially $M$ but with a different transition function.
+
+Assume $q' \in \delta_{D1}(q_D,a)$.
+
+Possibility 1 $a \in \Sigma_M \implies \exists q \in q_D : \delta_M(q,a)\ni q' \\\implies \delta_N(q,a)=\delta_M(q,a) \ni q' \in \delta_{D2}(q_D,a)$
+
+Possibility 2 $a \in \Sigma \setminus \Sigma_M \implies q' \in q_D \implies \delta_N(q',a)\ni q' \in \delta_{D2}(q_D,a)$
+
+The other direction works similarly.
+
+Now we can simply refer to the previous task and its explanation why our construction works for the deterministic case.
