--- a/2/root.tex
+++ b/2/root.tex
@@ -94,6 +94,8 @@ transition/.style={rectangle,thick,draw=black,minimum width=3mm,inner ysep=5mm, 
 \begin{document}
 \maketitle
 \input{ex1}
+\clearpage
 \input{ex2}
+\clearpage
 \input{ex3}
 \end{document}
