--- a/2/root.tex
+++ b/2/root.tex
@@ -18,6 +18,7 @@
 \tikzstyle{edge} = [draw,thick,->]
 \tikzstyle{weight} = []
 
+\usepackage{listings}
 \usepackage{graphicx}
 \usepackage[parfill]{parskip}
 \usepackage{booktabs} % for much better looking tables
