--- a/3/ex2.tex
+++ b/3/ex2.tex
@@ -1,103 +1,4 @@
 % !TeX root = root.tex
 % !TeX spellcheck = en_US
-\section{Petri nets}
-\textbf{Task 1.} A semaphore which allows two processes to be in the critical section can be modeled by adding two tokens in the place \textit{U}.
-\begin{figure}[h]
-\begin{tikzpicture}[node distance=1.5cm,>=stealth',bend angle=45,auto]
-	\node [transition] (s) [label=below:spawn]{};
-	\node[place,tokens=0] (0) [right of=s, label=below:0]{}
-		edge[pre] (s);
-	\node [transition] (a) [right of=0, label=below:acquire]{}
-		edge[pre] (0);
-	\node[place,tokens=0] (1) [right of=a, label=below:1]{}
-		edge[pre] (a);
-	\node [transition] (b) [right of=1, label=below:balance]{}
-		edge[pre] (1);
-	\node[place,tokens=0] (2) [right of=b, label=below:2]{}
-		edge[pre] (b);
-	\node [transition] (r) [right of=2, label=below:release]{}
-		edge[pre] (2);
-	\node[place,tokens=0] (3) [right of=r, label=below:3]{}
-		edge[pre] (r);
-	\node[place,tokens=2] (U) [above of=a, label=above:U]{}
-		edge[pre,bend left=10] (r)
-		edge[post] (a);
-	\node[place,tokens=0] (L) [above of=2, label=above:L]{}
-		edge[pre,bend right=10] (a)
-		edge[post] (r);
-\end{tikzpicture}
-\end{figure}
+\section{Vector Addition System with States}
 
-To model that only a constant overall number $k$ of permits are allowed, we add an additional place \textit{permits} which contains $k$ tokens and is connected to the transition \textit{acquire}. In the following figure we set $k=5$.
-\begin{figure}[h]
-\begin{tikzpicture}[node distance=1.5cm,>=stealth',bend angle=45,auto]
-	\node [transition] (s) [label=below:spawn]{};
-	\node[place,tokens=0] (0) [right of=s, label=below:0]{}
-		edge[pre] (s);
-	\node [transition] (a) [right of=0, label=below:acquire]{}
-		edge[pre] (0);
-	\node[place,tokens=0] (1) [right of=a, label=below:1]{}
-		edge[pre] (a);
-	\node [transition] (b) [right of=1, label=below:balance]{}
-		edge[pre] (1);
-	\node[place,tokens=0] (2) [right of=b, label=below:2]{}
-		edge[pre] (b);
-	\node [transition] (r) [right of=2, label=below:release]{}
-		edge[pre] (2);
-	\node[place,tokens=0] (3) [right of=r, label=below:3]{}
-		edge[pre] (r);
-	\node[place,tokens=2] (U) [above of=a, label=above:U]{}
-		edge[pre,bend left=10] (r)
-		edge[post] (a);
-	\node[place,tokens=0] (L) [above of=2, label=above:L]{}
-		edge[pre,bend right=10] (a)
-		edge[post] (r);
-	\node[place,tokens=5] (p) [above of=0, label=above:permits]{}
-		edge[post] (a);
-\end{tikzpicture}
-\end{figure}
-
-\textbf{Task 2.} To model a reentrant lock, we add the transitions \textit{relock1} and \textit{relock2} such that in both places \textit{1} and \textit{2} the process in the critical section can acquire a further lock. Since we have to check whether a process calls unlock as often as lock, we add the place \textit{counter} which gets a token whenever relock is called and loses a token whenever reunlock is called. Only if the number of tokens in \textit{counter} is zero, the process can release the lock and leave the critical section. Therefore, we add an inhibitory edge from \textit{counter} to $\textit{unlock}$.
-\begin{figure}[h]
-\begin{tikzpicture}[node distance=1.5cm,>=stealth',bend angle=45,auto]
-	\node [transition] (s) [label=below:spawn]{};
-	\node[place,tokens=0] (0) [right of=s, label=below:0]{}
-		edge[pre] (s);
-	\node [transition] (l) [right of=0, label=below:lock]{}
-		edge[pre] (0);
-	\node[place,tokens=0] (1) [right of=a, label=below:1]{}
-		edge[pre] (l);
-	\node [transition] (b) [right of=1, label=below:balance]{}
-		edge[pre] (1);
-	\node[place,tokens=0] (2) [right of=b, label=below:2]{}
-		edge[pre] (b);
-	\node [transition] (u) [right of=2, label=below:unlock]{}
-		edge[pre] (2);
-	\node[place,tokens=0] (3) [right of=r, label=below:3]{}
-		edge[pre] (u);
-	\node[place,tokens=1] (U) [above of=a, label=above:U]{}
-		edge[pre, bend left=10] (u)
-		edge[post] (l);
-	\node[place,tokens=0] (L) [above of=2, label=above:L]{}
-		edge[pre,bend right=10] (l)
-		edge[post] (u);
-	\node [transition] (l1) [below of=1, label=left:relock1]{}
-		edge[pre, bend left=20] (1)
-		edge[post, bend right=20] (1);
-	\node [transition] (l2) [below of=2, label=left:relock2]{}
-		edge[pre, bend left=20] (2)
-		edge[post, bend right=20] (2);
-	\node[place,tokens=0] (c) [below of=l2, label=below:counter]{}
-		edge[pre] (l1)
-		edge[pre] (l2)
-		edge[post,-o,bend left=15] (u);
-	\node [transition] (u1) [left of=c, label=left:reunlock1]{}
-		edge[pre] (c)
-		edge[pre] (1)
-		edge[post, bend right=15] (1);
-	\node [transition] (u2) [right of=c, label=right:reunlock2]{}
-		edge[pre] (c)
-		edge[pre] (2)
-		edge[post, bend right=15] (2);
-\end{tikzpicture}
-\end{figure}
