--- a/3/ex1.tex
+++ b/3/ex1.tex
@@ -1,42 +1,52 @@
 % !TeX root = root.tex
 % !TeX spellcheck = en_US
-\section{Synchronized Product for DFAs/NFAs with Different Alphabets}
+\section{Petri Net, Termination and Linear Programming}
 \subsection{Task 1}
+We can encode the presence of non-decreasing cycles in a linear program as follows:
+\begin{equation*}
+\begin{array}{ll@{}ll}
+\text{Variables:} 	& M_1, M_2, X_1, X_2\\
+\text{Subject to:} & M_1 \geq 0\\
+										& M_2 \geq 0\\
+										& X_1 \geq 0\\
+										& X_2 > 0\\
+										& M_1 = M_0 + C \cdot X_1\\
+										& M_2 = M_1 + C \cdot X_2\\
+										& M_2 \geq M_1
+\end{array}
+\end{equation*}
+Here, $C$ is the connectivity matrix, $M_0$ is the initial marking, $M_1$ and $M_2$ are markings and $X_1$ and $X_2$ are vectors that represent the number of times each transition fires.
+This means that we can reach the marking $M_1$ from $M_0$ by applying an arbitrary number of transitions and we can reach the marking $M_2$ form $M_1$ by applying at least one transition. Since $M_2 \geq M_1$, there is a non-decreasing cycle.
 
+In the example we have
 \begin{align*}
-T((Q_M,\Sigma_M,\delta_M,q_{0 M},F_M),\Sigma) = (Q_M,\Sigma,\delta,q_{0 M},F_M)\\
-\delta(q,\sigma)=
-\begin{cases} 
-      \delta_M(q,\sigma) & q\in \Sigma_M\\
-      q & else
-   \end{cases}
+&C = \begin{pmatrix}
+-1 & -1 & 0 & 0\\
+0 & 1 & -1 & 2\\
+0 & 0 & 2 & 3\\
+\end{pmatrix}\\
+&M_0 = \begin{pmatrix} 1 \\ 0 \\ 1 \end{pmatrix},
+M_1 = \begin{pmatrix} 0 \\ 1 \\ 1 \end{pmatrix},
+M_2 = \begin{pmatrix} 0 \\ 1 \\ 2 \end{pmatrix}\\
+&X_1 = \begin{pmatrix} 0 \\ 1 \\ 0 \\ 0 \end{pmatrix},
+X_2 = \begin{pmatrix} 0 \\ 0 \\ 2 \\ 1 \end{pmatrix}.
 \end{align*}
-
-By the definition in the lecture the extended $\delta(q,\sigma)$ should just do nothing if the symbol is not in the language, this is the same as just doing a self loop, effectively we are doing nothing.
+For these assignments all constraints are satisfied and a non-decreasing cycle is found.
 
 \subsection{Task 2}
-
+This analysis does not always work. If we look at the following example from the lecture
+\begin{center}\begin{tikzpicture}[node distance=1.5cm,>=stealth',bend angle=45,auto]
+	\node[place,tokens=0] (0) []{};
+	\node [transition] (a) [right of=0]{}
+		edge[pre, bend right = 20] node[midway, above]{1} (0)
+		edge[post, bend left = 20] node[midway, below]{2} (0);
+\end{tikzpicture}\end{center}
+and set
 \begin{align*}
-T((Q_M,\Sigma_M,\delta_M,q_{0 M},F_M),\Sigma) = (Q_M,\Sigma,\delta,q_{0 M},F_M)\\
-\delta(q,\sigma)=
-\begin{cases} 
-      \delta_M(q,\sigma) 	& q \in \Sigma_M\\
-      \{q\} 				& q \in \Sigma \setminus \Sigma_M
-   \end{cases}
+&C = (1)\\
+&M_0 = M_1 = (0), M_2 = (1)\\
+&X_1 = (0), X_2 = (1),
 \end{align*}
+all constraints are satisfied and therefore the linear program finds a non-decreasing cycle. But since in the initial marking the place has no token and the transition can not fire, the petri net actually terminates.
 
-By the definition in the lecture the extended $\delta(q,\sigma)$ should just do nothing if the symbol is not in the language, this is the same as just doing a self loop, effectively we are doing nothing.
-
-First of all we will prove that determinization and then using a) is the same as using the definition above and then doing determinization. Clearly the only thing that has to be shown, is that the transition function $\delta_D(q_D,a)$ is the same for both, because nothing else changes.
-
-Let $(Q_D,\Sigma,\delta_{D1},q_{0 D},F_D)$ be the first mentioned automata(i.e. $M \rightarrow D \rightarrow D1$) and $\delta_{D2}$ be the transition of he second mentioned automata(i.e. $M \rightarrow N \rightarrow D2$). Let $\delta_D$ be the transition of the determinized automata before this construction(i.e. $M \rightarrow D$). Let $\delta_N$ be the constructed automata before determinization(i.e. $M \rightarrow N$), essentially $M$ but with a different transition function.
-
-Assume $q' \in \delta_{D1}(q_D,a)$.
-
-Possibility 1 $a \in \Sigma_M \implies \exists q \in q_D : \delta_M(q,a)\ni q' \\\implies \delta_N(q,a)=\delta_M(q,a) \ni q' \in \delta_{D2}(q_D,a)$
-
-Possibility 2 $a \in \Sigma \setminus \Sigma_M \implies q' \in q_D \implies \delta_N(q',a)\ni q' \in \delta_{D2}(q_D,a)$
-
-The other direction works similarly.
-
-Now we can simply refer to the previous task and its explanation why our construction works for the deterministic case.
+Therefore, the analysis is sound but not complete. If we are allowed to pick the initial marking such that every transition can be fired, the analysis is also complete since we can fire the transitions in the non-decreasing cycle. 
