--- a/3/ex2.tex
+++ b/3/ex2.tex
@@ -10,9 +10,9 @@ and let us encode the VASS as
 
 \subsection{Task 1}
 Given a Petri net $N$ we can encode an equivalent Vass $V$ as:
-\[V=(\{1\},|S|,\delta,i_0)\]
+\[V=(\{0\} \cup T,|S|,\delta,i_0)\]
 and w.o.l.g. assume $S=\{1,\dots,m\}$ let
-\[\delta=\{(1,v_t,1)|\forall i \in S : v[i]=W(t,i)-W(i,t)\}\]
+\[\delta=\{(0,v_t,t)|\forall i \in S : v_t[i]=-W(i,t)\} \cup \{(t,v_t,0)|\forall i \in S : v_t[i]=W(t,i)\}\]
 i.e. for every transition $t$ in $T$ add a loop to the VASS that encodes this $t$. Lastly let
 \[i_0=(1,(M_0[1],\dots,M_0[m]))\]
 
@@ -37,11 +37,11 @@ Lastly w.o.l.g $i_0=(x,(y_1,\dots,y_n))$
 \subsection{Task 2}
 
 Let $V$ be obtained from $N$ by the above construction. Then a marking $M$ can be transformed to a state for $V$ as follows:
-\[\alpha(M)=(1,(M[1],\dots,M[m]))\]
+\[\alpha(M)=(0,(M[1],\dots,M[m]))\]
 
-Assume we are in some marking $M$ and transition $t$ is enabled, such that $M[t>M'$, then for $\alpha(M)$ transition $(1,v_t,1)$ from the construction is usable, because markings are positive and our construction encodes the change in markings, thus $\alpha(M)\rightarrow \alpha(M')$. This is sufficient for an argument by induction.
+Assume we are in some marking $M$ and transition $t$ is enabled, such that $M[t>M'$, then for $\alpha(M)$ transition $(0,v_t,t)$ and $(t,v_t,0)$ from the construction is usable, because markings are positive and our construction encodes the change in markings, thus $\alpha(M)\rightarrow \alpha(M')$. This is sufficient for an argument by induction.
 
-Assume we are in some marking $M$ and transition $t$ is not enabled, then this marking is not enabled, because one state $s\in S$ in $N$ does not have enough tokens for the transition to fire. However this means $M[s]-W(s,t)<0$ and since $v_t[s]=-W(s,t)$ $\alpha(M)$ cannot fire transition $(1,v_t,1)$. Because we have not added any elements to $\delta$ other than elements from $t\ in T$ this is sufficient for an argument by induction.
+Assume we are in some marking $M$ and transition $t$ is not enabled, then this marking is not enabled, because one state $s\in S$ in $N$ does not have enough tokens for the transition to fire. However this means $M[s]-W(s,t)<0$ and since $v_t[s]=-W(s,t)$ $\alpha(M)$ cannot fire transition $(0,v_t,t)$. Because we have not added any elements to $\delta$ other than elements from $t\ in T$ this is sufficient for an argument by induction.
 
 Let $N$ be obtained from $V$ by the above construction. Then a state for $V$ can be transformed to a marking $M$ as follows:
 \[\beta((x,(y_1,\dots,y_n)))=M\]
