--- a/7/ex2.tex
+++ b/7/ex2.tex
@@ -1,100 +1,31 @@
 % !TeX root = root.tex
 % !TeX spellcheck = en_US
-\section{Comparing models of Communicating State Machines}
+\section{Communicating State Machines with Bags (instead of FIFO)}
 
-\subsection{Task 1}
-The transition rules for point-to-point communication with bags are as follows:
+\subsection{CSM to PN}
 
-Sending a message
-\[
-\infer{(M,C) \rightarrow (M^\prime,C^\prime)}
-{M[i] \xrightarrow{j!a} s & C^\prime = C[(i,j) \leftarrow C[i,j] \cup \{a\}] & 
-M^\prime = M[i \leftarrow s]}
-\]
-Receiving a message
-\[
-\infer{(M,C) \rightarrow (M^\prime,C^\prime)}
-{M[i] \xrightarrow{?a} s & a \in C[j,i] & C^\prime = C[(j,i) \leftarrow C[j,i] \setminus \{a\}] & M^\prime = M[i \leftarrow s]}
-\]
-\subsection{Task 2}
-Since a communicating state machine has no mechanism to receive messages dependent on the sender or channel, both the p2p bags and the mailbox bag can be seen as one multiset of received messages. Therefore, every bag+p2p trace is also a bag+mailbox trace and vice versa. 
+The idea is to simulate the CSM directly, via one set of places for the states and one set of places for the message channels.
 
-\subsection{Task 3}
-Since FIFO+mailbox+lookahead only extends the receive rule, it is still possible to not make use of the lookahead by choosing $w$ as empty. Thus, every FIFO+mailbox trace is still a possible FIFO+mailbox+lookahead trace.
+For each state in machine in CSM we add a place in PN. For each Message Channel we add $|\Sigma|$ places. Then we encode each transition of some machine in CSM or as a transition in PN as follows:
 
-Conversely, we can give a FIFO+mailbox+lookahead trace that is not a possible FIFO+mailbox trace in the following example:
+$(s,?a,s')$ take token from place $s$, add token to place $s'$, take token from place $id,a$.
 
-\begin{enumerate}[]
-\item $A$:
-\item
-\begin{tikzpicture}[shorten >=1pt,node distance=2cm,on grid,auto] 
-   \node[state,initial] (a_1)   {$a_1$}; 
-   \node[state] (a_2) [right=of a_1] {$a_2$}; 
-   \node[state] (a_3) [right=of a_2] {$a_3$}; 
-    \path[->] 
-    (a_1) edge  node {$B!x$} (a_2)
-    (a_2) edge  node  {$B!y$} (a_3);
-\end{tikzpicture}
-\item $B$:
-\item
-\begin{tikzpicture}[shorten >=1pt,node distance=2cm,on grid,auto] 
-   \node[state,initial] (b_1)   {$b_1$}; 
-   \node[state] (b_2) [right=of b_1] {$b_2$}; 
-    \path[->] 
-    (b_1) edge  node {$?y$} (b_2);
-\end{tikzpicture}
-\end{enumerate}
-The following trace is possible with FIFO+mailbox+lookahead:
-\begin{itemize}
-\item initial state\\
-	$A$: state $a1$, messages: $\epsilon$, $B$: state $b1$, messages: $\epsilon$
-\item $A$ sends to $B$\\
-	$A$: state $a2$, messages: $\epsilon$, $B$: state $b1$, messages: $x$
-\item $A$ sends to $B$\\
-	$A$: state $a3$, messages: $\epsilon$, $B$: state $b1$, messages: $x \cdot y$
-\item $B$ skips $x$ and receives $y$\\
-	$A$: state $a2$, messages: $\epsilon$, $B$: state $b2$, messages: $\epsilon$
-\end{itemize}
-This trace is not possible with FIFO+mailbox, since $B$ can not skip $x$ to receive $y$. So, $B$ can not apply any transitions.
-\subsection{Task 4}
-We suppose that bag+mailbox is meant, since FIFO+bag does not make sense.
+$(s,id!a,s')$ take token from place $s$, add token to place $s'$, add token to place $id,a$.
 
-Every FIFO+mailbox+lookahead trace is also a bag+mailbox trace, since with a bag it is not necessary to skip messages as the multiset semantics allows us to receive the messages in an arbitrary order. Moreover, in the bag+mailbox setting we can just ignore the messages that are skipped by FIFO+mailbox+lookahead.
+The marking that should be covered is simply a 0 in all places, except for the state that should be reached, put a 1 here.
 
-To give a bag+mailbox trace that is not possible with FIFO+mailbox+lookahead, we extend the example above as follows:
-\begin{enumerate}[]
-\item $A$:
-\item
-\begin{tikzpicture}[shorten >=1pt,node distance=2cm,on grid,auto] 
-   \node[state,initial] (a_1)   {$a_1$}; 
-   \node[state] (a_2) [right=of a_1] {$a_2$}; 
-   \node[state] (a_3) [right=of a_2] {$a_3$}; 
-    \path[->] 
-    (a_1) edge  node {$B!x$} (a_2)
-    (a_2) edge  node  {$B!y$} (a_3);
-\end{tikzpicture}
-\item $B$:
-\item
-\begin{tikzpicture}[shorten >=1pt,node distance=2cm,on grid,auto] 
-   \node[state,initial] (b_1)   {$b_1$}; 
-   \node[state] (b_2) [right=of b_1] {$b_2$}; 
-   \node[state] (b_3) [right=of b_2] {$b_3$};
-    \path[->] 
-    (b_1) edge  node {$?y$} (b_2)
-    (b_2) edge  node {$?x$} (b_3);
-\end{tikzpicture}
-\end{enumerate}
-The following trace is possible with bag+mailbox:
-\begin{itemize}
-\item initial state\\
-	$A$: state $a1$, messages: $\emptyset$, $B$: state $b1$, messages: $\emptyset$
-\item $A$ sends to $B$\\
-	$A$: state $a2$, messages: $\emptyset$, $B$: state $b1$, messages: $\{x\}$
-\item $A$ sends to $B$\\
-	$A$: state $a3$, messages: $\emptyset$, $B$: state $b1$, messages: $\{x, y\}$
-\item $B$ receives $y$\\
-	$A$: state $a2$, messages: $\emptyset$, $B$: state $b2$, messages: $\{x\}$
-\item $B$ receives $x$\\
-	$A$: state $a2$, messages: $\emptyset$, $B$: state $b3$, messages: $\emptyset$
-\end{itemize}
-This trace is not possible with FIFO+mailbox+lookahead, since to receive $y$, $B$ has to skip $x$. Therefore it can not receive $x$ after $y$ as skipped messages are dropped.
+The equivalence is trivial.
+
+The resulting PN has $f(N,m,|\Sigma|)=N(|\Sigma|+m)$ places.
+
+The resulting machine has the same number of transitions as all the transitions in the CSM. Or at maximum $Nm(|\Sigma|+N|\Sigma|)$.
+
+\subsection{PN to CSM}
+
+The idea is to simulate the marking with a bag channel(multiset). And simulate transitions via a cycle(of multiple states) in a machine in the CSM starting at the so called common state. Finally the marking that should be reached is a path from the common state reading each message defining a token in the marking.
+
+For each place in PN add a message in $\Sigma$ in the CSM. We will assume a machine can send to itself, otherwise we simply use the copy machine from the lecture. For each transition in the PN add a cycle of states starting at the common state, first reading each message defining a token, then writing each message defining a token into its channel. Finally for the marking that should be covered add a path from the common state reading each message defining a token in the marking until the marking is completely read.
+
+The state that should be reached is the final state of this path.
+
+Again the equivalence is trivial.
