--- a/8/root.tex
+++ b/8/root.tex
@@ -17,6 +17,7 @@
 \tikzstyle{selected vertex} = [vertex, fill=red!24]
 \tikzstyle{edge} = [draw,thick,->]
 \tikzstyle{weight} = []
+\usepackage{algorithmic}
 
 \usepackage{graphicx}
 \usepackage[parfill]{parskip}
